@@ -186,11 +186,11 @@ SET(WTF_INCLUDE_DIRECTORIES
     "${JAVASCRIPTCORE_DIR}/wtf/unicode"
     "${JAVASCRIPTCORE_DIR}/wtf/dtoa"
     "${JavaScriptCore_INCLUDE_DIRECTORIES}"
+    "${THIRDPARTY_DIR}"
 )
 
 SET(WTF_LIBRARIES
 )
-
 
 IF (ENABLE_FAST_MALLOC)
     LIST(APPEND WTF_SOURCES
@@ -200,14 +200,7 @@ ELSE ()
     ADD_DEFINITIONS(-DUSE_SYSTEM_MALLOC=1)
 ENDIF()
 
-
-SET(WTF_PORT_FLAGS )
 INCLUDE_IF_EXISTS(${JAVASCRIPTCORE_DIR}/wtf/Platform${PORT}.cmake)
-
-LIST(APPEND WTF_INCLUDE_DIRECTORIES
-    "${CMAKE_BINARY_DIR}"
-    "${CMAKE_SOURCE_DIR}/Source/ThirdParty"
-)
 
 WEBKIT_WRAP_SOURCELIST(${WTF_SOURCES})
 INCLUDE_DIRECTORIES(${WTF_INCLUDE_DIRECTORIES})
